# pi5-video-looper

./: README.md  install.sh  pyproject.toml  reload.sh  setup.py
Adafruit_Video_Looper/: mpv.py  video_looper.py
assets/: video_looper.ini
