[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Adafruit_Video_Looper"
description = "Modern video looper for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU GPLv2"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "pyudev>=0.23.1",
    "pygame>=2.0.0",
    "six>=1.16.0",
    "RPi.GPIO>=0.7.0",
    "pigpio>=1.78"
]

[tool.setuptools]
packages = ["Adafruit_Video_Looper"] 